times converetd to ist
